Style: fixing header letterspacing and fontsize

--- a/src/app/component/Header.module.css
+++ b/src/app/component/Header.module.css
@@ -1,5 +1,5 @@
 .headerContainer{
- height: 25vh;
+ height: 30vh;
  width: 100vw;
  overflow: hidden;
  display: flex;
@@ -14,9 +14,8 @@
  position: absolute;
  color: rgb(35, 24, 1);
  text-shadow: 2px 2px 2px wheat;
- font-size: 3.5vw;
- letter-spacing: 2vw;
- white-space: no-wrap;
+ font-size: 6vw;
+ white-space: nowrap;
 }
 
 .headerImg{
@@ -30,7 +29,6 @@
 
 @media screen and (max-width: 400px){
  .headerTitle{
-  font-size: 10vw;
   text-align: center;
   color: wheat;
   text-shadow: 2px 2px 2px rgb(35, 24, 1);
